--- a/public/index.html
+++ b/public/index.html
@@ -104,8 +104,8 @@
 								<b>Multimedia Producer.</b>
                             </span>
                         </h1>
-                        <p class="color_white mb_30">Over 18 years experience developing visually captivating web, mobile and other multimedia applications.</p>
-                        <a class="btn btn-default" href="images/Resume-MalikAhmad-July2019.pdf">Download Resume</a>
+                        <p class="color_white mb_30">Over 20 years experience developing visually captivating web, mobile and other multimedia applications.</p>
+                        <a class="btn btn-default" href="images/Resume-MalikAhmad-2021.pdf">Download Resume</a>
                     </div>
                 </div>          
             </div>
@@ -189,16 +189,17 @@
 					</div>
 					<div class="col-md-12 col-lg-6">
 						<div class="skill-progress wow animated slideInRight">
-		                    <div class="prgs-bar fact-counter"> <span>Angular 7</span>
+
+							<div class="prgs-bar fact-counter"> <span>React / React Native / Redux</span>
+		                        <div class="progress count wow" data-wow-duration="0ms">
+		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
+		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
+								</div>
+							</div>
+							<div class="prgs-bar fact-counter"> <span>Angular 7</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
-								</div>
-							</div>
-							<div class="prgs-bar fact-counter"> <span>React / React Native</span>
-		                        <div class="progress count wow" data-wow-duration="0ms">
-		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
-		                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
 								</div>
 							</div>
 		                    <div class="prgs-bar fact-counter"> <span>CSS</span>
@@ -296,7 +297,7 @@
 	===================================================-->
 	<!--	Start Experience and Projects
 	===================================================-->
-	<div class="experience background2 overlay_two py_60 full_row">
+	<div class="experience overlay_two py_60 full_row">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
@@ -954,7 +955,7 @@
 					        </div>
 						</div>
 						<div class="col-md-8 col-lg-8">
-							<form class="form contact_message wow animated fadeInRight" id="contact-form" action="email.php" method="post">
+							<form class="form contact_message wow animated fadeInRight" id="contact-form" action="http://localhost:5001/visdevelop-ef40e/us-central1/emailMessage" method="post">
 								<div class="row">
 									<div class="col-md-6 col-lg-6">
 										<div class="form-group">
