--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 
 							<div class="prgs-bar fact-counter"> <span>React / React Native / Redux</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
-		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
+		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="100">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
 								</div>
 							</div>
@@ -413,6 +413,21 @@
 						<div class="filter-list">
 							<div class="portfolio-items">
 								<div class="row">
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/karsun.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/karsun.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>UI Development (React / Redux)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
 								  	<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="images/portfolio/dhs-ventera.jpg" data-fancybox="gallery">
@@ -468,6 +483,21 @@
 														<ul>
 															<li>Web Development,</li>
 															<li>Interactive Media</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="column mix mix_all apps design mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/silat-techniques.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/silat-techniques.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>Mobile App</li>
 														</ul>
 													</div>
 												</div>
@@ -561,6 +591,22 @@
 															<li>Design,</li>
 															<li>Web Development,</li>
 															<li>Multimedia</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="column mix mix_all wordpress multimedia mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/silatnet.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/silatnet.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>Web Design,</li>
+															<li>WordPress</li>
 														</ul>
 													</div>
 												</div>
