--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                             </span>
                         </h1>
                         <p class="color_white mb_30">Over 20 years experience developing visually captivating web, mobile and other multimedia applications.</p>
-                        <a class="btn btn-default" href="images/Resume-MalikAhmad-2021.pdf">Download Resume</a>
+                        <a class="btn btn-default" href="images/Resume-MalikAhmad-2022.pdf">Download Resume</a>
                     </div>
                 </div>          
             </div>
@@ -306,7 +306,7 @@
 							<div class="col-md-6 col-lg-6">
 							    <div class="counter count wow text-center" data-wow-duration="300ms">
 							    	<span class="flaticon-man-working-on-a-laptop-from-side-view"></span>
-					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="18">0</h2><span>+</span>
+					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="20">0</h2><span>+</span>
 					            	</div>
 					            	<h3 class="color_white mt_15">Years of Experience</h3>
 					          	</div>
@@ -314,7 +314,7 @@
 							<div class="col-md-6 col-lg-6">
 							    <div class="counter count wow text-center" data-wow-duration="300ms">
 							    	<span class="flaticon-half-time-work"></span>
-					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="85">0</h2><span>+</span>
+					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="88">0</h2><span>+</span>
 					            	</div>
 					            	<h3 class="color_white mt_15">Projects</h3>
 					          	</div>
@@ -335,7 +335,7 @@
 				<div class="col-md-12 col-lg-12">
 					<div class="section_title_1 text-center mx-auto pb_60 wow animated slideInUp">
 	                    <h2 class="title text-uppercase"><span class="line_double mx-auto color_default">services</span>What i do</h2>
-	                    <span class="sub_title">Lately my focus has been in UI and cross platform mobile development using modern JavaScript libraries such as Angular and React. I also enjoy working with Photoshop and Illustrator, and have experience in video and audio production.</span>
+	                    <span class="sub_title">Lately my focus has been in UI and cross platform mobile development using modern JavaScript libraries such as React and Angular. I am a avid mobile developer on my spare time specializing in Flutter. I also enjoy working with Photoshop and Illustrator, and have experience in video and audio production.</span>
 	                </div>
 				</div>
 				<div class="services_item1">
@@ -354,7 +354,7 @@
 					              <div class="srv_item_number color_lightgray"><strong>02.</strong></div>
 					              <h3 class="p_20 text-uppercase color_primary">Website Development</h3>
 					              <div class="srv_icon color_white"><span class="flaticon-programming"></span></div>
-					              <p>Complex full-stack application using latest JavaScript libraries such as Angular, React, Firebase, MongoDB, etc.</p>
+					              <p>Complex full-stack application using latest JavaScript libraries such as React, Angular, Firebase, MongoDB, etc.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-lg-3">
@@ -390,7 +390,7 @@
 				<div class="col-md-12 col-lg-12">
 					<div class="section_title_1 text-center mx-auto pb_60 wow animated slideInUp">
 	                    <h2 class="title text-uppercase"><span class="line_double mx-auto color_default">portfolio</span>My Projects</h2>
-	                    <span class="sub_title">In almost 2 decades, I have worked on nearly 100 different projects ranging from complex applications for major corporations, to web and logo design. Below are a few of some of the interesting projects I have worked on.</span>
+	                    <span class="sub_title">For over 2 decades, I have worked on nearly 100 different projects ranging from complex applications for major corporations, to web and logo design. Below are a few of some of the interesting projects I have worked on.</span>
 	                </div>
 				</div>
 				<div class="col-md-12 col-lg-12">
@@ -413,6 +413,66 @@
 						<div class="filter-list">
 							<div class="portfolio-items">
 								<div class="row">
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/govcio.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/govcio.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>UI Development (React / Redux)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="column mix mix_all apps design mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/silat-institute.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/silat-institute.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>Mobile App</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/vaers-gdit.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/vaers-gdit.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>UI Development (React / Redux)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/haystax.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/haystax.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>UI Development (React / Redux)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
 									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="images/portfolio/karsun.jpg" data-fancybox="gallery">
@@ -927,7 +987,7 @@
 							<h6>President of UPSF</h6>
 							<p>A. Malik has an extensive skill set in both front-end web development and design, as well as administering and maintaining content management systems such as WordPress.</p>
 						</div>
-						<div class="member_feedback p_30 color_secondery">
+						<!--<div class="member_feedback p_30 color_secondery">
 							<div class="client_img"><img src="images/testimonial/gamble.png" alt="image"></div>
 							<div class="star d-inline-block mt_30 color_default">
 								<ul>
@@ -940,8 +1000,8 @@
 							</div>
 							<h5 class="color_primary mb_15">Gamble Gilbertson</h5>
 							<h6>Principal at V! Studios</h6>
-							<!--<p>Malik is a talented multimedia developer and an invaluable part of our team. He brought our projects to live with his strong understanding of multiple programming languages (ActionScript, JavaScript, jQuery, etc).</p>-->
-						</div>
+							<p>Malik is a talented multimedia developer and an invaluable part of our team. He brought our projects to live with his strong understanding of multiple programming languages (ActionScript, JavaScript, jQuery, etc).</p>
+						</div>-->
     				</div>
     			</div>
 			</div>
