--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,7 @@
 							<div class="col-md-6 col-lg-6">
 							    <div class="counter count wow text-center" data-wow-duration="300ms">
 							    	<span class="flaticon-man-working-on-a-laptop-from-side-view"></span>
-					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="20">0</h2><span>+</span>
+					            	<div class="counting_digit color_special mt_15"> <h2 class="count-num" data-speed="3000" data-stop="20">0</h2><span>+</span>
 					            	</div>
 					            	<h3 class="color_white mt_15">Years of Experience</h3>
 					          	</div>
@@ -314,7 +314,7 @@
 							<div class="col-md-6 col-lg-6">
 							    <div class="counter count wow text-center" data-wow-duration="300ms">
 							    	<span class="flaticon-half-time-work"></span>
-					            	<div class="counting_digit color_default mt_15"> <h2 class="count-num" data-speed="3000" data-stop="88">0</h2><span>+</span>
+					            	<div class="counting_digit color_special mt_15"> <h2 class="count-num" data-speed="3000" data-stop="88">0</h2><span>+</span>
 					            	</div>
 					            	<h3 class="color_white mt_15">Projects</h3>
 					          	</div>
