Switch Flutter and Javascript

--- a/public/index.html
+++ b/public/index.html
@@ -208,13 +208,13 @@
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
 								</div>
 							</div>
-		                    <div class="prgs-bar fact-counter"> <span>JavaScript</span>
+		                    <div class="prgs-bar fact-counter"> <span>Flutter</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="85">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemax="100"> </div>
 								</div>
 							</div>
-		                    <div class="prgs-bar fact-counter"> <span>CSS, HTML & Bootstrap</span>
+		                    <div class="prgs-bar fact-counter"> <span>JavaScript</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
