latest changes Sept 2022

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
 							<br>
 							<p>One of the highlights of my career was creating award-winning web and Flash applications for NASA, Software AG, Online Resources and many more. I also learned more about server side programming (PHP, ASP.NET) databases, (MySQL, SQL Server). Around 2009, when Adobe Flash started to become obsolete, my focus turned to JavaScript, HTML5 and CSS, developing and maintaining websites for various companies throughout my career. </p>
 							<br>
-							<p>When mobile devices became more and more popular in 2010, I began developing cross platform applications using JavaScript. To date, I have developed 6 cross platform apps and led teams in the development of powerful web applications using the latest Javascript libraries (Angular, React, React Native, Expo, etc) for organizations and companies such as Accenture, NASA, The Great Courses, etc.</p>
+							<p>When mobile devices became more and more popular in 2010, I began developing cross platform applications using JavaScript. To date, I have developed 6 cross platform apps and led teams in the development of powerful web applications using the latest Javascript libraries (Angular, React, React Native, Flutter, etc) for organizations and companies such as Accenture, NASA, The Great Courses, etc.</p>
 						</div>
 						<div class="personal_info">
 							<div class="row">
@@ -174,7 +174,7 @@
 				<div class="col-md-12 col-lg-12">
 					<div class="section_title_1 text-center mx-auto pb_60 wow animated slideInUp">
 	                    <h2 class="title text-uppercase"><span class="line_double mx-auto color_default">Programming</span>Senior UI Developer</h2>
-	                    <span class="sub_title">Over 18 years of development of web and multimedia applications with expertise in UI development JavaScript and app programming.</span>
+	                    <span class="sub_title">Over 18 years of development of web and multimedia applications with expertise in UI development JavaScript and mobile app programming.</span>
 	                </div>
 				</div>
 			</div>
@@ -196,10 +196,10 @@
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
 								</div>
 							</div>
-							<div class="prgs-bar fact-counter"> <span>Angular 7</span>
+							<div class="prgs-bar fact-counter"> <span>Angular 13</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%</div>
-		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
+		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
 								</div>
 							</div>
 		                    <div class="prgs-bar fact-counter"> <span>CSS</span>
@@ -217,7 +217,7 @@
 		                    <div class="prgs-bar fact-counter"> <span>JavaScript</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
-		                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
+		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
 								</div>
 							</div>
 						</div>
@@ -346,7 +346,7 @@
 					              <div class="srv_item_number color_lightgray"><strong>01.</strong></div>
 					              <h3 class="p_20 text-uppercase color_primary">Cross-Platorm Mobile Apps</h3>
 					              <div class="srv_icon color_white"><span class="flaticon-website-design-symbol"></span></div>
-					              <p>I can build React Native apps that run smoothly on both IOS and Android devices, and also WebView apps using Apache Cordova.</p>
+					              <p>I can build mobile apps that run smoothly on both IOS and Android devices using Flutter or React Native.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-lg-3">
@@ -413,6 +413,21 @@
 						<div class="filter-list">
 							<div class="portfolio-items">
 								<div class="row">
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/scoring2023.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/scoring2023.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>Full-Stack Development (Angular 13 / Firebase)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
 									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="images/portfolio/govcio.jpg" data-fancybox="gallery">
