--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                             </span>
                         </h1>
                         <p class="color_white mb_30">Over 20 years experience developing visually captivating web, mobile and other multimedia applications.</p>
-                        <a class="btn btn-default" href="images/Resume-MalikAhmad-2022.pdf">Download Resume</a>
+                        <a class="btn btn-default" href="images/Resume-MalikAhmad-Sept-2023.pdf">Download Resume</a>
                     </div>
                 </div>          
             </div>
@@ -129,12 +129,13 @@
 				<div class="row">
 					<div class="col-md-7 col-lg-7">
 						<div class="myself color_secondery wow animated fadeInLeft">
-							<p>Born in Connecticut in 1975, I grew up in the DC area with a strong passion for drawing and design.  After graduating from Georgetown University In 1998 on a academic scholarship, I began as a graphic artist for my father’s publishing company Writers’ Inc - putting my art minor to full use. After a couple of years of design-focused work, I came to the realization that with a solid understanding of web programming, the possibilities were endless. Equipped with programming knowledge from classes at Georgetown and a strong interest in the world wide web, I started developing high impact websites for various companies and organizations. </p>
-							<br>
-							<p>One of the highlights of my career was creating award-winning web and Flash applications for NASA, Software AG, Online Resources and many more. I also learned more about server side programming (PHP, ASP.NET) databases, (MySQL, SQL Server). Around 2009, when Adobe Flash started to become obsolete, my focus turned to JavaScript, HTML5 and CSS, developing and maintaining websites for various companies throughout my career. </p>
-							<br>
-							<p>When mobile devices became more and more popular in 2010, I began developing cross platform applications using JavaScript. To date, I have developed 6 cross platform apps and led teams in the development of powerful web applications using the latest Javascript libraries (Angular, React, React Native, Flutter, etc) for organizations and companies such as Accenture, NASA, The Great Courses, etc.</p>
-						</div>
+							<p>From the vibrant DC metro area, my journey began rooted in a profound passion for drawing and design. Holding an academic scholarship from Georgetown University, I graduated in 1998, ready to channel my language major and art minor into the evolving digital landscape. My foundation in design started as a graphic artist at Writers’ Inc., my family's renowned publishing company.</p>
+							<br/>
+							<p>But design was just the beginning. Recognizing the limitless potential of the web when complemented with programming expertise, I ventured into crafting high-impact websites for diverse entities. My portfolio boasts award-winning web and Flash applications tailored for industry giants like NASA, Software AG, and Online Resources, to name a few. Alongside, I honed skills in server-side programming (PHP, ASP.NET) and database management (MySQL, SQL Server).</p>
+							<br/>
+							<p>As the digital era evolved, I seamlessly transitioned from Adobe Flash to mastering the trifecta of JavaScript, HTML5, and CSS. This adaptability saw me at the forefront when mobile revolutionized the scene in 2010. I embraced the challenge, developing cross-platform applications leveraging cutting-edge JavaScript technologies.</p>
+							<br/>
+							<p>Today, with a record of developing 6 cross-platform apps and spearheading teams to craft powerful web applications, I'm well-versed in modern Javascript libraries and frameworks such as Angular, React, React Native, and Flutter. My collaborative projects with leading organizations, including LabCorp, DHS, FEMA, Accenture, NASA, and The Great Courses, stand testament to my prowess and dedication as a Front-End UI Developer.</p>						</div>
 						<div class="personal_info">
 							<div class="row">
 								<div class="col-md-12 col-lg-12">
@@ -189,22 +190,27 @@
 					</div>
 					<div class="col-md-12 col-lg-6">
 						<div class="skill-progress wow animated slideInRight">
-
+							<div class="prgs-bar fact-counter"> <span>Angular 13</span>
+		                        <div class="progress count wow" data-wow-duration="0ms">
+		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="100">0</span>%</div>
+		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
+								</div>
+							</div>
 							<div class="prgs-bar fact-counter"> <span>React / React Native / Redux</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
 		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="100">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
 								</div>
 							</div>
-							<div class="prgs-bar fact-counter"> <span>Angular 13</span>
-		                        <div class="progress count wow" data-wow-duration="0ms">
-		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%</div>
-		                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemax="100"> </div>
-								</div>
-							</div>
 		                    <div class="prgs-bar fact-counter"> <span>CSS</span>
 		                        <div class="progress count wow" data-wow-duration="0ms">
-		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%</div>
+		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="100">0</span>%</div>
+		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
+								</div>
+							</div>
+							<div class="prgs-bar fact-counter"> <span>JavaScript</span>
+		                        <div class="progress count wow" data-wow-duration="0ms">
+		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="100">0</span>%</div>
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
 								</div>
 							</div>
@@ -214,12 +220,7 @@
 		                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemax="100"> </div>
 								</div>
 							</div>
-		                    <div class="prgs-bar fact-counter"> <span>JavaScript</span>
-		                        <div class="progress count wow" data-wow-duration="0ms">
-		                            <div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%</div>
-		                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
-								</div>
-							</div>
+
 						</div>
 					</div>
 				</div>
@@ -344,6 +345,14 @@
 							<div class="col-md-6 col-lg-3">
 								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
 					              <div class="srv_item_number color_lightgray"><strong>01.</strong></div>
+					              <h3 class="p_20 text-uppercase color_primary">UI and Front-End Development</h3>
+					              <div class="srv_icon color_white"><span class="flaticon-programming"></span></div>
+					              <p>Complex full-stack application using latest JavaScript libraries such as React, Angular, Firebase, MongoDB, etc.</p>
+								</div>
+							</div>
+							<div class="col-md-6 col-lg-3">
+								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
+					              <div class="srv_item_number color_lightgray"><strong>02.</strong></div>
 					              <h3 class="p_20 text-uppercase color_primary">Cross-Platorm Mobile Apps</h3>
 					              <div class="srv_icon color_white"><span class="flaticon-website-design-symbol"></span></div>
 					              <p>I can build mobile apps that run smoothly on both IOS and Android devices using Flutter or React Native.</p>
@@ -351,29 +360,20 @@
 							</div>
 							<div class="col-md-6 col-lg-3">
 								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
-					              <div class="srv_item_number color_lightgray"><strong>02.</strong></div>
-					              <h3 class="p_20 text-uppercase color_primary">Website Development</h3>
-					              <div class="srv_icon color_white"><span class="flaticon-programming"></span></div>
-					              <p>Complex full-stack application using latest JavaScript libraries such as React, Angular, Firebase, MongoDB, etc.</p>
-								</div>
-							</div>
-							<div class="col-md-6 col-lg-3">
-								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
 					              <div class="srv_item_number color_lightgray"><strong>03.</strong></div>
-					              <h3 class="p_20 text-uppercase color_primary">Wordpress Websites</h3>
-					              <div class="srv_icon color_white"><span class="flaticon-wordpress-logo"></span></div>
-					              <p>I use WordPress for sites that need a strong content management system and eye catching design.</p>
-								</div>
-							</div>
-							<div class="col-md-6 col-lg-3">
-								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
-					              <div class="srv_item_number color_lightgray"><strong>04.</strong></div>
 					              <h3 class="p_20 text-uppercase color_primary">Multimedia & Design</h3>
 					              <div class="srv_icon color_white"><span class="flaticon-editor"></span></div>
 					              <p>I love Photoshop and Illustrator. I am an expert in video editing using Final Cut X, Premiere, After Effects, etc.</p>
 								</div>
 							</div>
-							
+							<div class="col-md-6 col-lg-3">
+								<div class="service_two text-center pt_15 mb_30 wow animated slideInUp">
+					              <div class="srv_item_number color_lightgray"><strong>04.</strong></div>
+					              <h3 class="p_20 text-uppercase color_primary">Wordpress Websites</h3>
+					              <div class="srv_icon color_white"><span class="flaticon-wordpress-logo"></span></div>
+					              <p>I use WordPress for sites that need a strong content management system and eye catching design.</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -413,6 +413,21 @@
 						<div class="filter-list">
 							<div class="portfolio-items">
 								<div class="row">
+									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
+										<div class="default-portfolio-item">
+											<a href="images/portfolio/labcorp.jpg" data-fancybox="gallery">
+												<img src="images/portfolio/labcorp.jpg" alt="image" />
+												<div class="overlay-box">
+													<span><i class="fa fa-eye" aria-hidden="true"></i></span>
+													<div class="tag">
+														<ul>
+															<li>UI Development (Angular 13)</li>
+														</ul>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
 									<div class="column mix mix_all development mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="images/portfolio/scoring2023.jpg" data-fancybox="gallery">
